<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/App.Widget.Light.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_49"
        android:layout_marginBottom="0dp"
        android:background="@android:color/transparent"
        android:titleTextColor="@color/black"
        app:layout_collapseMode="pin"
        app:navigationIcon="@mipmap/btn_back_dark_pressed"
        app:popupTheme="@style/ToolbarPopupBlackTheme"
        tools:ignore="UnusedAttribute" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <LinearLayout
            android:id="@+id/lay_login_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_login_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@null"
                app:srcCompat="@mipmap/login_logo" />

            <LinearLayout
                android:id="@+id/ll_login_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="@dimen/space_16"
                android:layout_marginRight="24dp"
                android:background="@drawable/bg_login_input_ok"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_login_username_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="14dp"
                    android:contentDescription="@null"
                    app:srcCompat="@mipmap/ic_singup_mobile" />

                <EditText
                    android:id="@+id/et_login_username"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:ems="15"
                    android:focusable="true"
                    android:hint="@string/login_input_username_hint"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:lines="1"
                    android:maxLines="1"
                    android:minLines="1"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:textColor="@color/tab_selected_color"
                    android:textColorHint="@color/login_line_color"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/font_16" />

                <ImageView
                    android:id="@+id/iv_login_username_del"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:contentDescription="@null"
                    android:scaleType="fitCenter"
                    android:visibility="gone"
                    app:srcCompat="@mipmap/ic_clear" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_login_code"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/bg_login_input_ok"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="14dp"
                    android:contentDescription="@null"
                    app:srcCompat="@mipmap/ic_login_code" />


                <EditText
                    android:id="@+id/et_code"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="验证码"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:minLines="1"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:textColor="@color/tab_selected_color"
                    android:textColorHint="@color/login_line_color"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/font_16" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="@dimen/size_28"
                    android:background="@color/login_line_color" />

                <TextView
                    android:id="@+id/tv_register_sms_call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_material_ripple"
                    android:gravity="center_vertical"
                    android:minWidth="80dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingLeft="@dimen/space_5"
                    android:text="获取验证码"
                    android:textColor="@color/day_colorPrimary"
                    android:textSize="12sp"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_login_pwd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/bg_login_input_ok"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_login_pwd_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="14dp"
                    android:contentDescription="@null"
                    app:srcCompat="@mipmap/ic_login_password" />


                <EditText
                    android:id="@+id/et_login_pwd"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:minLines="1"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:textColor="@color/tab_selected_color"
                    android:textColorHint="@color/login_line_color"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/font_16" />

                <ImageView
                    android:id="@+id/iv_login_pwd_del"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:contentDescription="@null"
                    android:scaleType="fitCenter"
                    android:visibility="gone"
                    app:srcCompat="@mipmap/ic_clear" />

            </LinearLayout>

            <Button
                android:id="@+id/bt_login_submit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="@dimen/space_16"
                android:layout_marginTop="50dp"
                android:layout_marginRight="@dimen/space_16"
                android:background="@drawable/bg_login_submit"
                android:elevation="0dp"
                android:enabled="false"
                android:outlineProvider="none"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/font_14"
                tools:targetApi="lollipop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/space_16"
                android:layout_marginTop="@dimen/size_20"
                android:layout_marginRight="@dimen/space_16"
                android:layout_marginBottom="@dimen/lay_20"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_user_agent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_material"
                    android:text="登陆即表示同意《链人用户协议》"

                    android:textColor="@color/day_colorPrimary"
                    android:textSize="@dimen/font_12" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv_feed_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/lay_20"
                    android:background="@drawable/ic_material"
                    android:paddingLeft="@dimen/lay_8"
                    android:paddingRight="@dimen/lay_8"
                    android:text="反馈"
                    android:textColor="@color/day_colorPrimary"
                    android:textSize="@dimen/font_12" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>